# pihole-textual

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.specify/memory/: constitution.md
specs/001-pihole-tui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-pihole-tui/checklists/: requirements.md
specs/001-pihole-tui/contracts/: api-spec.md
src/pihole_tui/: __init__.py  __main__.py  app.py  constants.py
src/pihole_tui/api/: __init__.py  auth.py  blocking.py  client.py  domains.py  queries.py  stats.py
src/pihole_tui/models/: __init__.py  blocking.py  config.py  domain.py  query.py  session.py  stats.py
src/pihole_tui/screens/: __init__.py  dashboard.py  domains.py  help.py  login.py  query_log.py  settings.py
src/pihole_tui/utils/: config_manager.py  crypto.py  formatters.py  validators.py
src/pihole_tui/widgets/: __init__.py  countdown_timer.py  domain_list.py  query_table.py  stat_card.py  status_indicator.py
